Fix skills on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -328,6 +328,7 @@ Skills
 
 .skill-element .inside {
   margin-left: 8px;
+  margin-right: 8px;
 }
 
 .skill-element:nth-child(4n - 1) {
